Add examples in intro notebook

--- a/notebooks/climate-modes-xeofs.ipynb
+++ b/notebooks/climate-modes-xeofs.ipynb
@@ -480,7 +480,7 @@
     "In this notebook, we demonstrated a basic workflow for performing an EOF analysis on gridded SST data using the `xeofs` package. We plotted the PCs associated with ENSO and PDO using deseasonalized, detrended SSTs.\n",
     "\n",
     "### What's next?\n",
-    "The next section will focus on applications of EOF analysis to answer scientific questions. (Coming soon!)"
+    "In the future, additional notebooks may use EOFs to recreate published figures, give an overview of other EOF packages, or explore variations of the EOF method."
    ]
   },
   {
