--- a/_preview/13/_sources/notebooks/eof-intro.ipynb
+++ b/_preview/13/_sources/notebooks/eof-intro.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "| ![PDO](images/mantua_hare_1.PNG) |\n",
     "|:--:|\n",
-    "| Adapted from {cite:p}`Mantua:2002a`. The three plots on the top show the EOFs for SST, sea level pressure, and surface wind stress, while the time series at the bottom is the associated PC. |\n",
+    "| Adapted from {cite:t}`Mantua:2002a`. The three plots on the top show the EOFs for SST, sea level pressure, and surface wind stress, while the time series at the bottom is the associated PC. |\n",
     "\n",
     "Besides the modes of variability already mentioned, an EOF analysis can also be used to identify the Northern and Southern Annular Modes (NAM and SAM), the Atlantic Multidecadal Oscillation/Variability (AMO/V), the zonal wave 3 pattern (ZW3) of both hemispheres, and others.\n",
     "\n",
