Add numpy eofs nb

--- a/references.bib
+++ b/references.bib
@@ -119,3 +119,61 @@
 	title = {Principal component analysis in meteorology and oceanography},
 	volume = {17},
 	year = {1988}}
+
+
+@article{dommenget_cautionary_2002,
+	title = {A {Cautionary} {Note} on the {Interpretation} of {EOFs}},
+	volume = {15},
+	issn = {0894-8755, 1520-0442},
+	url = {https://journals.ametsoc.org/view/journals/clim/15/2/1520-0442_2002_015_0216_acnoti_2.0.co_2.xml},
+	doi = {10.1175/1520-0442(2002)015<0216:ACNOTI>2.0.CO;2},
+	abstract = {Empirical orthogonal function (EOF) analyses (rotated or not) are widely used in climate research. In recent years there have been several studies in which EOF analyses were used to highlight potential physical mechanisms associated with climate variability. For example, several SST modes were identified such as the “Tropical Atlantic Dipole,” the “Tropical Indian Ocean Dipole,” and different SLP modes in the Northern Hemisphere winter. In this note it is emphasized that caution should be used when trying to interpret these statistically derived modes and their significance. Indeed, from a synthetic example it is shown that patterns derived from EOF analyses can be misleading at times and associated with very little climate physics.},
+	language = {EN},
+	number = {2},
+	urldate = {2025-04-06},
+	journal = {Journal of Climate},
+	author = {Dommenget, Dietmar and Latif, Mojib},
+	month = jan,
+	year = {2002},
+	note = {Publisher: American Meteorological Society
+Section: Journal of Climate},
+	pages = {216--225},
+	file = {Full Text PDF:/home/rf194656/Zotero/storage/GYFX9VEF/Dommenget and Latif - 2002 - A Cautionary Note on the Interpretation of EOFs.pdf:application/pdf},
+}
+
+@article{chen_pairwise-rotated_2017,
+	title = {Pairwise-{Rotated} {EOFs} of {Global} {SST}},
+	volume = {30},
+	issn = {0894-8755, 1520-0442},
+	url = {https://journals.ametsoc.org/view/journals/clim/30/14/jcli-d-16-0786.1.xml},
+	doi = {10.1175/JCLI-D-16-0786.1},
+	abstract = {Empirical orthogonal function (EOF) analysis of global sea surface temperature yields modes in which interannual variability associated with ENSO and the lower-frequency variability associated with the Pacific decadal oscillation (PDO) and the Atlantic multidecadal oscillation (AMO) are confounded with one another and with the signature of global warming. The confounded EOFs exhibit overlapping centers of action with polarities of the perturbations juxtaposed such that the respective modes are mutually orthogonal in the global domain. When physical modes with different time scales appear in the same pair of EOFs, the principal component (PC) time series tend to be positively correlated in one frequency band and negatively correlated in another. Mode mixing may be a reflection of sampling variability or it may reflect the lack of spatial orthogonality of the physical modes themselves. Using sequences of pairwise orthogonal rotations of selected PCs, it is possible, without recourse to filtering, to recover a global warming mode with a bland spatial pattern and a nearly linear upward trend, along with dynamical modes, each with its own characteristic time scale, that resemble ENSO, the PDO, and the AMO. Novel elements of this analysis include a rationale for choosing the optimal angle for pairwise rotation and a simple algorithm for eliminating mode mixing between the dynamical modes and the global warming mode by transferring the linear trends from the former to the latter.},
+	language = {EN},
+	number = {14},
+	urldate = {2025-07-31},
+	journal = {Journal of Climate},
+	author = {Chen, Xianyao and Wallace, John M. and Tung, Ka-Kit},
+	month = jul,
+	year = {2017},
+	note = {Publisher: American Meteorological Society
+Section: Journal of Climate},
+	keywords = {ENSO, Interannual variability, Multidecadal variability, Interdecadal variability, Pacific decadal oscillation, Atlantic Ocean},
+	pages = {5473--5489},
+	file = {Full Text PDF:/home/rf194656/Zotero/storage/NADKHKD7/Chen et al. - 2017 - Pairwise-Rotated EOFs of Global SST.pdf:application/pdf},
+}
+
+@article{sirovich_turbulence_1987,
+	title = {Turbulence and the dynamics of coherent structures. {I}. {Coherent} structures},
+	volume = {45},
+	issn = {0033-569X, 1552-4485},
+	url = {https://www.ams.org/qam/1987-45-03/S0033-569X-1987-0910462-6/},
+	doi = {10.1090/qam/910462},
+	language = {en},
+	number = {3},
+	urldate = {2025-07-30},
+	journal = {Quarterly of Applied Mathematics},
+	author = {Sirovich, Lawrence},
+	year = {1987},
+	pages = {561--571},
+	file = {Full Text PDF:/home/rf194656/Zotero/storage/BXBD3SSS/Sirovich - 1987 - Turbulence and the dynamics of coherent structures. I. Coherent structures.pdf:application/pdf},
+}
